--- a/spring-ai-replicate-spring-boot-autoconfigure/pom.xml
+++ b/spring-ai-replicate-spring-boot-autoconfigure/pom.xml
@@ -20,7 +20,7 @@
       <modelVersion>4.0.0</modelVersion>
 
       <parent>
-          <groupId>io.github.springaicommunity</groupId>
+          <groupId>org.springaicommunity</groupId>
           <artifactId>spring-ai-replicate-parent</artifactId>
           <version>1.0.0-SNAPSHOT</version>
       </parent>
@@ -32,7 +32,7 @@
 
       <dependencies>
           <dependency>
-              <groupId>io.github.springaicommunity</groupId>
+              <groupId>org.springaicommunity</groupId>
               <artifactId>spring-ai-replicate</artifactId>
           </dependency>
           <dependency>
