--- a/spring-ai-replicate-spring-boot-starter/pom.xml
+++ b/spring-ai-replicate-spring-boot-starter/pom.xml
@@ -5,7 +5,7 @@
       <modelVersion>4.0.0</modelVersion>
 
       <parent>
-          <groupId>io.github.springaicommunity</groupId>
+          <groupId>org.springaicommunity</groupId>
           <artifactId>spring-ai-replicate-parent</artifactId>
           <version>1.0.0-SNAPSHOT</version>
       </parent>
@@ -17,11 +17,11 @@
 
       <dependencies>
           <dependency>
-              <groupId>io.github.springaicommunity</groupId>
+              <groupId>org.springaicommunity</groupId>
               <artifactId>spring-ai-replicate</artifactId>
           </dependency>
           <dependency>
-              <groupId>io.github.springaicommunity</groupId>
+              <groupId>org.springaicommunity</groupId>
               <artifactId>spring-ai-replicate-spring-boot-autoconfigure</artifactId>
           </dependency>
           <dependency>
