--- a/spring-ai-replicate/pom.xml
+++ b/spring-ai-replicate/pom.xml
@@ -20,7 +20,7 @@
       <modelVersion>4.0.0</modelVersion>
 
       <parent>
-          <groupId>io.github.springaicommunity</groupId>
+          <groupId>org.springaicommunity</groupId>
           <artifactId>spring-ai-replicate-parent</artifactId>
           <version>1.0.0-SNAPSHOT</version>
       </parent>
