Add distributionManagement for snapshot publishing

--- a/pom.xml
+++ b/pom.xml
@@ -271,4 +271,11 @@
         </repository>
     </repositories>
 
+    <distributionManagement>
+        <snapshotRepository>
+            <id>central</id>
+            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
 </project>
