Add Central snapshots repository for parent POM resolution

--- a/pom.xml
+++ b/pom.xml
@@ -124,13 +124,14 @@
 
     <repositories>
         <repository>
-            <id>maven-central</id>
-            <url>https://repo.maven.apache.org/maven2/</url>
+            <id>central-snapshots</id>
+            <name>Maven Central Snapshots</name>
+            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
             <releases>
-                <enabled>true</enabled>
+                <enabled>false</enabled>
             </releases>
         </repository>
         <repository>
